@@ -191,6 +191,9 @@
 	Fixed running background commands on Windows that require shell
 	expansions.
 
+	Fixed swapped absolute/relative link creation on :alink/:rlink commands.
+	Patch by MadMaverick9.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
